add normalize and small css changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,19 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     
     <title>{{site.title}}</title>
 
-    <link href="/css/main.css" type="text/css" rel="stylesheet"/>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <link href="/css/normalize-7.0.0.css" type="text/css" rel="stylesheet">
+    <link href="/css/main.css" type="text/css" rel="stylesheet">
 
 </head>
 <body>
